--- a/M2A2_624352.html
+++ b/M2A2_624352.html
@@ -16,7 +16,7 @@
         <h1>Torneo de Videjuegos</h1>
         <hr/>
         <h2>Formulario de inscripción</h2>
-        <table border = "1">
+        <table border = "1" cellpadding = "10">
             <tr>
                 <td><label for = "nombreJugador">Nombre del jugador:</label></td>
                 <td>
