--- a/M2A2_624352.html
+++ b/M2A2_624352.html
@@ -32,7 +32,7 @@
             <tr>
                 <td><label for = "edad">Edad:</label></td>
                 <td>
-                    <input type = "number" placeholder="Escribe tu edad" id = "edad" name = "edad" max="40" min="12" required>
+                    <input type = "number" placeholder="Escribe tu edad" id = "edad" name = "edad" max="40" min="12">
                 </td>
             </tr>
             <tr>
@@ -66,7 +66,7 @@
             <tr>
                 <td><label for = "fechaInscripcion"> Fecha de inscripción:</label></td>
                 <td>
-                    <input type = "date" id = "fechaInscripcion" name = "fechaInscripcion" min = "2025-01-01" max = "2025-12-31" required>
+                    <input type = "date" id = "fechaInscripcion" name = "fechaInscripcion" min = "2025-01-01" max = "2025-12-31" >
                 </td>
             </tr>
             <tr>
