--- a/M2A2_624352.html
+++ b/M2A2_624352.html
@@ -32,7 +32,7 @@
             <tr>
                 <td><label for = "edad">Edad:</label></td>
                 <td>
-                    <input type = "number" placeholder="Escribe tu edad" id = "edad" name = "edad" max="40" min="12">
+                    <input type = "number" placeholder="Escribe tu edad" id = "edad" name = "edad" max="40" min="12" required>
                 </td>
             </tr>
             <tr>
